--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -102,6 +102,6 @@ This is Hölder’s inequality:
 	is known as \emph{Minkowski's Inequality}.
 \end{remark}
 \begin{fancyproof}
-	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity
+	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$
 \end{fancyproof}
 \end{document}
