txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -102,6 +102,7 @@ This is Hölder’s inequality:
 	is known as \emph{Minkowski's Inequality}.
 \end{remark}
 \begin{fancyproof}
-	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$
+	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$ is a norm. \\
+	Fix $f,g\in\Lp(S,\mu)$. We know that for any $x,y\in\R$ we get
 \end{fancyproof}
 \end{document}
