txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -400,7 +400,7 @@
 			frame code={},
 			interior code={
 				\path[
-				draw=green!80!black,
+				draw=white,
 				rounded corners,
 				pattern=custom north east lines,
 				hatchspread=12pt,
