txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -408,7 +408,13 @@
 				hatchcolor=gray!20
 				]
 				(interior.south east) rectangle (interior.north west);
-			}
+			},
+			boxed title style={interior style={PeachPuff1},sharp corners},
+			coltitle=Burlywood4,
+			fonttitle=\bfseries\itshape,
+			interior style={Burlywood2},
+			frame style={white},
+			title={Proof}}	
 		}
 	
 	\newtcolorbox{proofbox}{
