txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -398,6 +398,11 @@
 		\newtcolorbox{stripbox}{
 			enhanced,
 			frame code={},
+			boxed title style={interior style={PeachPuff1},sharp corners},
+			coltitle=Burlywood4,
+			fonttitle=\bfseries\itshape,
+			frame style={white},
+			title={Proof},
 			interior code={
 				\path[
 				draw=white,
