txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -408,7 +408,8 @@
 				hatchcolor=gray!20
 				]
 				(interior.south east) rectangle (interior.north west);
-			}
+			},
+			title={Proof}
 		}
 	
 	\newtcolorbox{proofbox}{
