txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -405,7 +405,7 @@
 				pattern=custom north east lines,
 				hatchspread=12pt,
 				hatchthickness=4pt,
-				hatchcolor=gray!20
+				hatchcolor=Coral1!20
 				]
 				(interior.south east) rectangle (interior.north west);
 			}
