txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -401,11 +401,12 @@
 			interior code={
 				\path[
 				draw=white,
-				rounded corners,
+				sharp corners,
 				pattern=custom north east lines,
 				hatchspread=12pt,
 				hatchthickness=4pt,
-				hatchcolor=Coral1!10
+				hatchcolor=Coral1!10,
+				title={Proof}
 				]
 				(interior.south east) rectangle (interior.north west);
 			}
