txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -409,7 +409,8 @@
 				]
 				(interior.south east) rectangle (interior.north west);
 			},
-			title={Proof}
+			title={Proof},
+			coltitle=black
 		}
 	
 	\newtcolorbox{proofbox}{
