txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -410,7 +410,8 @@
 				(interior.south east) rectangle (interior.north west);
 			},
 			title={Proof},
-			coltitle=black
+			coltitle=Burlywood4,
+			fonttitle=\bfseries\itshape,
 		}
 	
 	\newtcolorbox{proofbox}{
