txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -410,7 +410,7 @@
 				(interior.south east) rectangle (interior.north west);
 			},
 			title={Proof},
-			coltitle=Burlywood4,
+			coltitle=Coral2,
 			fonttitle=\bfseries\itshape,
 		}
 	
