txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -411,9 +411,9 @@
 				(interior.south east) rectangle (interior.north west);
 			},
 			title={Proof},
-			coltitle=Coral2,
+			coltitle=white,
 			fonttitle=\bfseries\itshape,
-			colbacktitle=red
+			colbacktitle=Coral1
 		}
 	
 	\newtcolorbox{proofbox}{
