txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -412,7 +412,7 @@
 			},
 			title={Proof},
 			coltitle=white,
-			fonttitle=\bfseries\itshape,
+			fonttitle=\bfseries,
 			colbacktitle=Coral1
 		}
 	
