txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -105,7 +105,7 @@ This is Hölder’s inequality:
 	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$ is a norm. \\
 	Fix $f,g\in\Lp(S,\mu)$. We know that for any $x,y\in\R$ we get
 	\begin{equation*}
-		\left|\frac{1}{2}x+\frac{1}{2}\right|
+		\left|\frac{1}{2}x+\frac{1}{2}\right|^{p}
 	\end{equation*}
 \end{fancyproof}
 \end{document}
