--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -105,7 +105,8 @@ This is Hölder’s inequality:
 	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$ is a norm. \\
 	Fix $f,g\in\Lp(S,\mu)$. We know that for any $x,y\in\R$ we get
 	\begin{equation*}
-		\left|\frac{1}{2}x+\frac{1}{2}\right|^{p}
+		\left|\frac{1}{2}x+\frac{1}{2}y\right|^{p}\leq\frac{1}{2}|x|^p+\frac{1}{2}|y|^{p}
 	\end{equation*}
+	since this mapping $r\to r^p$ is convex.
 \end{fancyproof}
 \end{document}
