txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -107,6 +107,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\left|\frac{1}{2}x+\frac{1}{2}y\right|^{p}\leq\frac{1}{2}|x|^p+\frac{1}{2}|y|^{p}
 	\end{equation*}
-	since this mapping $r\to r^p$ is convex.
+	since this mapping $r\to r^p$ is convex. This also means that
+	\begin{equation*}
+		\left|x+y\right|^p\leq2^{p-1}(|x|^{p}+|y|^{p})
+	\end{equation*}
 \end{fancyproof}
 \end{document}
