--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -109,7 +109,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	since this mapping $r\to r^p$ is convex. This also means that
 	\begin{equation*}
-		\left|x+y\right|^p\leq2^{p-1}(|x|^{p}+|y|^{p})
+		\left|x+y\right|^p\leq2^{p-1}\left(|x|^{p}+|y|^{p}\right)
 	\end{equation*}
 \end{fancyproof}
 \end{document}
