txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -113,7 +113,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	and this implies in particular that
 	\begin{equation*}
-		\left|f\right|
+		\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(|f(s)|^{p}+|g(s)|^{p}\right).
 	\end{equation*}
 \end{fancyproof}
 \end{document}
