txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -115,5 +115,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(|f(s)|^{p}+|g(s)|^{p}\right).
 	\end{equation*}
+	If we integrate
 \end{fancyproof}
 \end{document}
