txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -113,8 +113,11 @@ This is Hölder’s inequality:
 	\end{equation*}
 	and this implies in particular that
 	\begin{equation*}
-		\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(|f(s)|^{p}+|g(s)|^{p}\right).
+		\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(|f(s)|^{p}+|g(s)|^{p}\right)\qquad\maes{s\in S}.
 	\end{equation*}
-	If we integrate 
+	If we integrate over $S$ we get:
+	\begin{equation*}
+		eqn
+	\end{equation*}
 \end{fancyproof}
 \end{document}
