txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -117,7 +117,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	If we integrate over $S$ we get:
 	\begin{equation*}
-		eqn
+		\int_S\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(\int_S|f(s)|^{p}+\int_S|g(s)|^{p}\right)
 	\end{equation*}
 \end{fancyproof}
 \end{document}
