txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -119,5 +119,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\int_S\left|f(s)+g(s)\right|^{p}\leq2^{p-1}\left(\int_S|f(s)|^{p}+\int_S|g(s)|^{p}\right)
 	\end{equation*}
+	which means 
+	\begin{equation*}
+		\norm{f+g}
+	\end{equation*}
 \end{fancyproof}
 \end{document}
