txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -121,7 +121,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	which means 
 	\begin{equation*}
-		\norm{f+g}
+		\norm{f+g}_{p}^{p}\leq2^{p-1}\left(\norm{f}^p_p+\norm{g}^p_p\right)
 	\end{equation*}
 \end{fancyproof}
 \end{document}
