--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -123,5 +123,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{f+g}_{p}^{p}\leq2^{p-1}\left(\norm{f}^p_p+\norm{g}^p_p\right)
 	\end{equation*}
+	which means that $f+g\in\Lp(S,\mu)$.
 \end{fancyproof}
 \end{document}
