txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -102,7 +102,7 @@ This is Hölder’s inequality:
 	is known as \emph{Minkowski's Inequality}.
 \end{remark}
 \begin{fancyproof}
-	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$ is a norm. \\
+	We already know that if $f\in\Lp(S,\mu)$ then $\lambda f\in\Lp(S,\mu)$. Homogeneity and uniqueness are also existent for $\norm{\cdot}_p$ so in order to show that $\Lp(S,\mu)$ is a vector space we only need to prove that if $f,g\in\Lp(S,\mu)$ then $f+g\in\Lp(S,\mu)$ \underline{and} $\norm{\cdot}$ is a norm. \\
 	Fix $f,g\in\Lp(S,\mu)$. We know that for any $x,y\in\R$ we get
 	\begin{equation*}
 		\left|\frac{1}{2}x+\frac{1}{2}y\right|^{p}\leq\frac{1}{2}|x|^p+\frac{1}{2}|y|^{p}
@@ -123,6 +123,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{f+g}_{p}^{p}\leq2^{p-1}\left(\norm{f}^p_p+\norm{g}^p_p\right)
 	\end{equation*}
-	which means that $f+g\in\Lp(S,\mu)$.
+	which means that $f+g\in\Lp(S,\mu)$. This tells us 
 \end{fancyproof}
 \end{document}
