txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -123,6 +123,7 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{f+g}_{p}^{p}\leq2^{p-1}\left(\norm{f}^p_p+\norm{g}^p_p\right)
 	\end{equation*}
-	which means that $f+g\in\Lp(S,\mu)$. This tells us 
+	which means that $f+g\in\Lp(S,\mu)$. \par
+	We now must prove
 \end{fancyproof}
 \end{document}
