txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -124,6 +124,6 @@ This is Hölder’s inequality:
 		\norm{f+g}_{p}^{p}\leq2^{p-1}\left(\norm{f}^p_p+\norm{g}^p_p\right)
 	\end{equation*}
 	which means that $f+g\in\Lp(S,\mu)$. \par
-	We now must prove
+	We now must prove the Minkowski's inequality. We know that
 \end{fancyproof}
 \end{document}
