txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -126,7 +126,7 @@ This is Hölder’s inequality:
 	which means that $f+g\in\Lp(S,\mu)$. \par
 	We now must prove the Minkowski's inequality. We know that
 	\begin{equation*}
-			\norm{f+g}_{p}^{p}=\int_S\left|f+g\right|^{p\dmu}
+			\norm{f+g}_{p}^{p}=\int_S\left|f+g\right|^{p}\dmu
 	\end{equation*}
 \end{fancyproof}
 \end{document}
