txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -128,5 +128,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 			\norm{f+g}_{p}^{p}=\int_S\left|f+g\right|^{p}\dmu=\int_S\left|f+g\right|\left|f+g\right|^{p-1}\dmu
 	\end{equation*}
+	but since we know that 
 \end{fancyproof}
 \end{document}
