txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -128,6 +128,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 			\norm{f+g}_{p}^{p}=\int_S\left|f+g\right|^{p}\dmu=\int_S\left|f+g\right|\left|f+g\right|^{p-1}\dmu
 	\end{equation*}
-	but since we know that 
+	but since we know that $\left|f+g\right|\leq|f|+|g|$ then
+	\begin{equation*}
+			\norm{f+g}_{p}^{p}=
+	\end{equation*}
 \end{fancyproof}
 \end{document}
