--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -130,7 +130,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	but since we know that $\left|f+g\right|\leq|f|+|g|$ then
 	\begin{equation*}
-			\norm{f+g}_{p}^{p}=
+			\norm{f+g}_{p}^{p}\l
 	\end{equation*}
 \end{fancyproof}
 \end{document}
