txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -130,7 +130,8 @@ This is Hölder’s inequality:
 	\end{equation*}
 	but since we know that $\left|f+g\right|\leq|f|+|g|$ then
 	\begin{equation*}
-			\norm{f+g}_{p}^{p}\leq \int_S|f||f+g|^{p-1}\dmu+\int_S|g||f+g|^{p-1}\dmu
+			\norm{f+g}_{p}^{p}\leq \int_S|f||f+g|^{p-1}\dmu+\int_S|g||f+g|^{p-1}\dmu.
 	\end{equation*}
+	Call
 \end{fancyproof}
 \end{document}
