txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -132,6 +132,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 			\norm{f+g}_{p}^{p}\leq \int_S|f||f+g|^{p-1}\dmu+\int_S|g||f+g|^{p-1}\dmu.
 	\end{equation*}
-	Call $\psi=|f+g|^{p-1}$
+	Call $\psi=|f+g|^{p-1}$. It cleasly belongs 
 \end{fancyproof}
 \end{document}
