txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -132,6 +132,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 			\norm{f+g}_{p}^{p}\leq \int_S|f||f+g|^{p-1}\dmu+\int_S|g||f+g|^{p-1}\dmu.
 	\end{equation*}
-	Call $\psi=|f+g|^{p-1}$. It cleasly belongs 
+	Call $\psi=|f+g|^{p-1}$. It clearly belongs to $\Lq(S,\mu)$ because
+	\begin{equation*}
+		|\psi|^{q}=\left(|f+g|^{p-1}\right)q=\left|f+g\right|^{p}\qquad\text{since }q(p-1)=p
+	\end{equation*}
 \end{fancyproof}
 \end{document}
