--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -136,5 +136,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		|\psi|^{q}=\left(|f+g|^{p-1}\right)q=\left|f+g\right|^{p}\qquad\text{since }q(p-1)=p
 	\end{equation*}
+	so
+	\begin{equation*}
+		\norm{\psi}_{q}=\left(\int_S|\psi|^q\right)^{\frac{1}{q}}
+	\end{equation*}
 \end{fancyproof}
 \end{document}
