txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -138,7 +138,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	so
 	\begin{equation*}
-		\norm{\psi}_{q}=\left(\int_S|\psi|^q\right)^{\frac{1}{q}}
+		\norm{\psi}_{q}=\left(\int_S|\psi|^q\right)^{\frac{1}{q}}=\left(\int_S\left|f+g\right|^{p}\right)^{\frac{1}{q}}
 	\end{equation*}
 \end{fancyproof}
 \end{document}
