txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -140,5 +140,6 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{\psi}_{q}=\left(\int_S|\psi|^q\right)^{\frac{1}{q}}=\left(\int_S\left|f+g\right|^{p}\right)^{\frac{1}{q}}=\norm{f+g}_{p}^{\frac{p}{q}}<\infty
 	\end{equation*}
+	And this means that $|\psi|^{q}\in\Lone(S,\mu)\implies\psi\in\Lq(S,\mu)$
 \end{fancyproof}
 \end{document}
