txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -140,6 +140,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{\psi}_{q}=\left(\int_S|\psi|^q\right)^{\frac{1}{q}}=\left(\int_S\left|f+g\right|^{p}\right)^{\frac{1}{q}}=\norm{f+g}_{p}^{\frac{p}{q}}<\infty
 	\end{equation*}
-	And this means that $|\psi|^{q}\in\Lone(S,\mu)\implies\psi\in\Lq(S,\mu)$.
+	And this means that $|\psi|^{q}\in\Lone(S,\mu)\implies\psi\in\Lq(S,\mu)$. We also know that $|f|\in\Lp(S,\mu)$ so we can apply Holder's inequality with $f$ and $\psi$ so that
+	\begin{equation*}
+		\int_S|f||f+g|^{p-1}\dmu=\norm{f\psi}_1\leq\norm{f}_p\norm{\psi}
+	\end{equation*}
 \end{fancyproof}
 \end{document}
